[gd_scene load_steps=4 format=3 uid="uid://c725wvo1psitc"]

[ext_resource type="Script" uid="uid://bmqakqocn2ri2" path="res://scripts/Main.gd" id="1_0bbpv"]
[ext_resource type="Texture2D" uid="uid://ck8yudv056d56" path="res://scenes/map.png" id="2_rarhs"]
[ext_resource type="Texture2D" uid="uid://dp2l7k1gttee5" path="res://assets/PressButton.png" id="3_vcsgt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0bbpv")

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(641.5, 363)
scale = Vector2(0.827474, 0.699219)
texture = ExtResource("2_rarhs")

[node name="Btn_Youyang" type="TextureButton" parent="."]
offset_left = 187.0
offset_top = 214.0
offset_right = 316.0
offset_bottom = 328.0
disabled = true
texture_normal = ExtResource("3_vcsgt")
ignore_texture_size = true
stretch_mode = 0

[node name="Btn_Fenghuang" type="TextureButton" parent="."]
offset_left = 676.0
offset_top = 461.0
offset_right = 804.0
offset_bottom = 574.0
disabled = true
texture_normal = ExtResource("3_vcsgt")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="."]
offset_left = 404.0
offset_top = 29.0
offset_right = 804.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 64
text = "Cultural Map"

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="BackButton" type="Button" parent="."]
offset_left = 93.0
offset_top = 647.0
offset_right = 190.0
offset_bottom = 688.0
text = "Back"

[connection signal="pressed" from="Btn_Youyang" to="." method="_on_Btn_Youyang_pressed"]
[connection signal="pressed" from="Btn_Fenghuang" to="." method="_on_Btn_Fenghuang_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
